--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,5 +66,23 @@
     <string name="JobPosition">Job Position*</string>
     <string name="benefit">Benefit</string>
     <string name="Benefitof">Benefit of your Company*</string>
+    <string name="typejob">Type of job*</string>
+    <string name="Level">Level*</string>
+    <string name="Experience">Experience*</string>
+    <string name="Salary">Salary*</string>
+    <string name="JobInformation">Job Information</string>
+    <string name="Addfirstjob">Add a first Job</string>
+
+    -----------------------------------dropdown item----------------------------------------
+    <string-array name="my_dropdown_items">
+        <item>Male</item>
+        <item>Female</item>
+        <item>Not Required</item>
+    </string-array>
+    <string-array name="my_dropdown_items_typejob">
+        <item>Full-Time</item>
+        <item>Part-Time</item>
+        <item>Intern</item>
+    </string-array>
 
 </resources>
