finish all activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="sign_up">Register</string>
     <string name="english">English</string>
     <string name="vietnamese">Vietnamese</string>
-    <string name="job_for_two_side">Benefits for both sides</string>
+    <string name="job_for_two_side">Benefits for both</string>
     <string name="register">REGISTER</string>
     <string name="createcv">CREATE YOUR CV</string>
     <string name="help_you_easily_build_a_profile_find_jobs_quickly_if_you_are_a_recruiter_you_can_actively_find_the_people_you_need_for_your_job">Help you easily build a profile, find jobs quickly. if you are a recruiter, you can actively find the people you need for your job</string>
