--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -94,7 +94,7 @@
     <string name="full_time">Toàn thời gian</string>
     <string name="part_time">Bán thời gian</string>
     <string name="none">Không</string>
-    <string name="intern">Thực tập sinh</string>
+    <string name="intern">Thực tập</string>
     <string name="choice_city_to_sort">Chọn thành phố để sắp xếp</string>
     <string name="choice_type_of_job_to_sort">Chọn loại công việc để sắp xếp</string>
     <string name="choice_experience_year_to_sort">Chọn số năm kinh nghiệm để sắp xếp</string>
@@ -146,4 +146,11 @@
     <string name="position_">Vị trí:</string>
     <string name="region">Khu vực:</string>
     <string name="choice_pattern">Chọn mẫu công việc</string>
+    <string name="you_cant_edit_this_job_anymore_please_create_new_job">Bạn không thể chỉnh sửa công việc này nữa, vui lòng tạo công việc mới</string>
+    <string name="you_cant_turn_on_this_job_please_create_new_job">Bạn không thể bật công việc này, vui lòng tạo công việc mới</string>
+    <string name="you_cant_find_candidates_to_this_job_please_create_new_job">Bạn không thể tìm thấy ứng viên cho công việc này, vui lòng tạo công việc mới</string>
+
+    <string name="by">" bởi "</string>
+    <string name="your_cv_being_refuse_for_position">"CV của bạn đã bị từ chối cho vị trí: "</string>
+    <string name="your_cv_was_accept_please_wait_for_company_contact_position">"CV của bạn đã được chấp nhận, vui lòng đợi liên hệ từ công ty. Vị trí: "</string>
 </resources>
